docs/deployment-guide/goals/k8s/v12-keycloak/nginx/integrated/provider/provider-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:
  name: provider-ingress-int
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: provider-int-sovity.tvsdevops.co.uk
    http:
      paths:
      - path: /api/management
        pathType: Prefix
        backend:
          service:
            name: provider-connector
            port:
              number: 11002
      - path: /api/dsp
        pathType: Prefix
        backend:
          service:
            name: provider-connector
            port:
              number: 11003
      - path: /
        pathType: Prefix
        backend:
          service:
            name: provider-ui
            port:
              number: 8080
  tls:
  - hosts:
    - provider-int-sovity.tvsdevops.co.uk
    secretName: myapp-tls-secret
